--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,1 +1,4 @@
-<div class="banner" src="https://i.pinimg.com/736x/94/c9/7d/94c97d83a16a080d43dda916d3c08af8.jpg" alt=""></div>
+ <div class="d-flex justify-content-center banner-container">
+     <img class="banner" src="../../../assets/imagenes/banner.jpg" alt="">
+ </div>
+
