--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,7 +1,11 @@
-<app-foto-perfil></app-foto-perfil>
-<div class="info-personal">
-    <h1>Matias Albanesi</h1>
-    <h2>Desarrollador Web</h2>
-    <p>Estudiante de Ingenieria Informatica en la Universisdad Nacional de La Matanza</p>
-    <p>Buenos Aires (Argentina)</p>
+<div class="d-flex justify-content-center background-texture">
+    <div id="acerca-de">
+        <app-foto-perfil></app-foto-perfil>
+        <div class="info-personal">
+            <h1>Matias Albanesi</h1>
+            <h2>Desarrollador Web</h2>
+            <p>Estudiante de Ingenieria Informatica en la Universisdad Nacional de La Matanza</p>
+            <p>Buenos Aires (Argentina)</p>
+        </div>
+    </div>
 </div>
