--- a/src/app/componentes/banner/banner.component.css
+++ b/src/app/componentes/banner/banner.component.css
@@ -1,10 +1,11 @@
 .banner {
-    width: 100%;
-    height: 350px;
-    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/007/544/900/small_2x/summer-beach-background-with-sand-and-wave-top-view-illustration-vector.jpg");
-    background-size: fixed;
-    background-repeat: repeat;
-    border-radius: 10px;
-    margin-top: 100px;
+    margin-top: 87px;
+    max-height: 400px;
+    min-height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
+.banner-container {
+    background-color: #000;
 }
