--- a/src/app/componentes/educacion/educacion.component.css
+++ b/src/app/componentes/educacion/educacion.component.css
@@ -4,14 +4,14 @@
 }
 
 img {
-    margin: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
     min-width: 100px;
 }
 
 h2{
     font-size: 30px;
     margin-left: 50px;
-    margin-top: 20px;
     margin-bottom: 10px;
 }
 
