--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,28 +1,31 @@
-<h2>Educacion</h2>
-<ul>
-    <li class="d-flex flex-row align-items-center edu-item">
-        <img src="https://www.colegiosenbuenosaires.com/wp-content/uploads/2019/10/Colegio-Cervantes_en-La-Tablada-la-Matanza-escudo-logo.jpg" width="100" height="100" alt="">
-        <div>
-            <h3>Colegio Parroquial Cervantes</h3>
-            <p>Titulo Bachiller con orientacion </p>
-            <p>Fecha finalizacion - 2017</p>
-        </div>
-    </li>
-    <li class="d-flex flex-row align-items-center edu-item">
-        <img src="https://iconape.com/wp-content/files/ka/193872/png/193872.png" width="100" height="100" alt="">
-        <div>
-            <h3>Univerdad Nacional de La Matanza</h3>
-            <p>Ingenieria en Informatica</p>
-            <p>Actualmente cursando 4to año</p>
-        </div>
-    </li>
-    <li class="d-flex flex-row align-items-center edu-item">
-        <img src="https://brandlogos.net/wp-content/uploads/2013/01/escudo-nacional-logo-vector.png" width="100" height="100" alt="">
-        <div>
-            <h3>Argentina Programa</h3>
-            <p>Programador Web Full-Stack junior</p>
-            <p>Fecha finalizacion - 31/8/2022</p>
-        </div>
-    </li>
-
-</ul>
+<div class="d-flex justify-content-center background-texture">
+    <div id="educacion">
+        <h2>Educacion</h2>
+        <ul>
+            <li class="d-flex flex-row align-items-center edu-item">
+                <img src="https://media.discordapp.net/attachments/777764419878256650/1005378159316828191/Colegio-Cervantes_en-La-Tablada-la-Matanza-escudo-logo.png" width="100" height="100" alt="">
+                <div>
+                    <h3>Colegio Parroquial Cervantes</h3>
+                    <p>Titulo Bachiller con orientacion </p>
+                    <p>Fecha finalizacion - 2017</p>
+                </div>
+            </li>
+            <li class="d-flex flex-row align-items-center edu-item">
+                <img src="https://iconape.com/wp-content/files/ka/193872/png/193872.png" width="100" height="100" alt="">
+                <div>
+                    <h3>Univerdad Nacional de La Matanza</h3>
+                    <p>Ingenieria en Informatica</p>
+                    <p>Actualmente cursando 4to año</p>
+                </div>
+            </li>
+            <li class="d-flex flex-row align-items-center edu-item">
+                <img src="https://brandlogos.net/wp-content/uploads/2013/01/escudo-nacional-logo-vector.png" width="100" height="100" alt="">
+                <div>
+                    <h3>Argentina Programa</h3>
+                    <p>Programador Web Full-Stack junior</p>
+                    <p>Fecha finalizacion - 31/8/2022</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
