--- a/src/app/componentes/foto-perfil/foto-perfil.component.css
+++ b/src/app/componentes/foto-perfil/foto-perfil.component.css
@@ -2,9 +2,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    box-shadow: 0 0 1px 1px #999;
-    position: relative;
-    top: -80px;
+    box-shadow: 0px 2px 5px 1px #000;
     left: 40px;
 }
 
@@ -12,5 +10,4 @@ img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    
 }
