--- a/src/app/componentes/header/header.component.css
+++ b/src/app/componentes/header/header.component.css
@@ -1,7 +1,3 @@
-.has-logo {
-    background-color: #444;
-}
-
 .btn {
     font-size: 25px;
 }
@@ -9,6 +5,9 @@
 .navbar {
     margin: 0;
     padding: 0;
+    background: rgb(255,153,204);
+    background: linear-gradient(90deg, rgba(255,153,204,0.93) 0%, rgba(255,185,85,0.93) 49%, rgba(255,102,102,0.93) 76%);
+    box-shadow: 0 1px 1px #111;
 }
 
 .container-fluid {
@@ -19,17 +18,17 @@
     border: none;
     margin-left: 2px;
     text-align: left;
+    color: #fff;
 }
 
 nav {
-    box-shadow: 0px 1px 1px 1px #888;
     width: 100%;
     position: fixed;
 }
 
 .navbar-toggler:active {
     box-shadow: none;
-    transform: scale(0.99);
+    transform: scale(0.90);
 }
 
 .navbar-toggler:focus {
@@ -39,10 +38,11 @@ nav {
 li a {
     width: 100%;
     padding-right: 20px;
+    color: #fff;
 }
 
 li a:hover{
-    background-color: #ddd;
+    transform: scale(1.005);
 }
 
 .container-fluid {
@@ -50,12 +50,19 @@ li a:hover{
 }
 
 .btn {
-    padding-right: 30px;
+    margin-right: 10px;
     width: 100%;
     text-align: right;
+    color: #fff;
 }
 
 .btn:hover{
-    background-color: #ddd;
-    border-radius: 0;
+    transform: scale(1.005);
+}
+
+.mi-icon {
+    height: 40px;
+    width: 55px;
+    border: 1px solid #fff;
+    padding: 0;
 }
