--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+
+#acerca-de, #educacion, #habilidad, #proyecto {
+    max-width: 1100px;
+    width: 100%;
+    margin: 20px;
+    margin-top: 35px;
+    padding: 40px;
+    box-shadow: 10px 10px 5px rgba(100,100,100,1);
+    background-color: rgba(255, 255, 255,0.9);
+}
+
+app-foto-perfil {
+    position: relative;
+    top: -120px;
+    left: 40px;
+}
+
+#acerca-de {
+    padding-bottom: 0;
+}
+
+.background-texture {
+    background-color: #000;
+    background-size: fixed;
+    background-repeat: repeat;
+}
+
+@media (max-width: 750px){
+    .banner{
+        width: 85%;
+    }
+
+    app-foto-perfil{
+        display: flex;
+        justify-content: center;
+        left: 0;
+    }
+    .info-personal {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
