--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,7 @@
 #acerca-de, #educacion, #habilidad, #proyecto {
     max-width: 1100px;
     width: 100%;
-    margin: 20px;
-    margin-top: 35px;
+    margin: 35px;
     padding: 40px;
     box-shadow: 10px 10px 5px rgba(100,100,100,1);
     background-color: rgba(255, 255, 255,0.9);
@@ -25,9 +24,13 @@ app-foto-perfil {
     background-repeat: repeat;
 }
 
-@media (max-width: 750px){
+@media (max-width: 766px){
     .banner{
         width: 85%;
+    }
+
+    #acerca-de, #educacion, #habilidad, #proyecto {
+        zoom: 80%;
     }
 
     app-foto-perfil{
