--- a/src/app/componentes/educacion/educacion.component.css
+++ b/src/app/componentes/educacion/educacion.component.css
@@ -15,10 +15,12 @@ h2{
 
 ul {
     padding-right: 20px;
+    padding-left: 0;
 }
 
 .edu-item {
     margin: 15px;
+    position: relative;
 }
 
 p {
