--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -1,30 +1,44 @@
 <div class="d-flex justify-content-center background-texture">
     <div id="habilidad">
-        <h2>Habilidades</h2>
+        <div class="d-flex flex-row justify-items-center">
+            <h2>Habilidades</h2>
+            <button class="btn add-button" routerLink="/add-habilidad" *ngIf="isLogged">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                </svg>
+            </button>
+        </div>
         <ul class="d-flex justify-content-center align-items-center flex-wrap">
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/html.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">HTML</span>
-            </li>
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/js.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">JS</span>
-            </li>
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/css.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">CSS</span>
-            </li>
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/java.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">Java</span>
-            </li>
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/spring.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">Spring Boot</span>
-            </li>
-            <li class="d-flex flex-column align-items-center habilidad-item">
-                <img src="../../../assets/habilidades-svg/mysql.svg" width="100" height="100" alt="">
-                <span class="span_habilidad_item">MySQL</span>
+            <li class="d-flex flex-column align-items-center habilidad-item" *ngFor="let habilidad of habilidades">
+                <circle-progress
+                    [percent]="habilidad.porcentaje"
+                    [radius]="50"
+                    [showUnits]="false"
+                    [imageSrc]="habilidad.ruta"
+                    [imageHeight]="60"
+                    [imageWidth]="60"
+                    [titleFontSize]="'15px'"
+                    [showImage]="true"
+                    [outerStrokeWidth]="5"
+                    [innerStrokeWidth]="3"
+                    [outerStrokeColor]="'#000'"
+                    [innerStrokeColor]="'#777'"
+                    [animation]="true"
+                    [animationDuration]="300">
+                </circle-progress>
+                <span class="span_habilidad_item">{{habilidad.nombre}}</span>
+                <div class="btn-option d-flex flex-column" *ngIf="isLogged">
+                    <button class="btn edit-button" routerLink="/edit-habilidad/{{habilidad.id}}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+                        </svg>
+                    </button>
+                    <button class="btn del-button" (click)="delete(habilidad.id)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                            <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+                        </svg>
+                    </button>
+                </div>
             </li>
         </ul>
     </div>
