--- a/src/app/componentes/acerca-de/acerca-de.component.css
+++ b/src/app/componentes/acerca-de/acerca-de.component.css
@@ -8,21 +8,61 @@
     margin-left: 40px;
     margin-right: 40px;
     top: -100px;
-    
-}
-.background {
-    background-color: #ddd;
-}
-
-h1 {
-    font-size: 25px;
-}
-
-h2 {
-    font-weight: normal;
 }
 
 p {
     line-height: 23px;
-    max-width: 400px;
+    max-width: 600px;
+    width: 100%;
 }
+
+.foto-perfil {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    box-shadow: 0px 2px 5px 1px #000;
+    position: relative;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.edit-foto {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: rgba(240,240,240,0.3);
+    color: #000;
+    border-radius: 1px solid #888;
+    left: 0;
+}
+
+.edit-foto:hover{
+    background-color: rgba(120,120,120,0.3);
+}
+
+.edit {
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    top: -3px;
+}
+
+.edit:hover {
+    transform: scale(1.2);
+}
+
+.edit-desc{
+    position:absolute;
+    left:100%;
+    top: 0;
+}
+
+.nombre-perfil, .descripcion {
+    position: relative;
+}
+
