--- a/src/app/componentes/educacion/edit-educacion-component/edit-educacion.component.html
+++ b/src/app/componentes/educacion/edit-educacion-component/edit-educacion.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center form-container">
-    <form class="myform" (ngSubmit)="onUpdate()" novalidate #f="ngForm" action="">
+<div mat-dialog-content>
+    <form class="d-flex flex-column" novalidate #f="ngForm" action="">
         <div class="form-group">
             <label for="institucion">Institucion</label>
             <input type="text" class="form-control" id="institucion" name="institucion" [(ngModel)]="educacion.institucion" required>
@@ -13,9 +13,10 @@
             <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="educacion.descripcion" required>
         </div>
         <div class="form-group">
-            <label for="ruta">Ruta</label>
-            <input type="text" class="form-control" id="ruta" name="ruta" [(ngModel)]="educacion.ruta" required>
+            <label for="file">Seleccione imagen (opcional)</label>
+            <input (change)="capturarFile($event)" type="file" accept="image/*" class="form-control" id="file" name="file" required>
         </div>
-        <button class="btn btn-primary">Actualizar educacion</button>
+        <button class="btn btn-primary" mat-button (click)="onUpdate()">Actualizar educacion</button>
+        <button class="btn btn-primary" mat-button (click)="cerrar()">Cancelar</button>
     </form>
 </div>
