--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex justify-content-center background-texture">
+<div class="d-flex justify-content-center">
     <div id="educacion">
         <div class="d-flex flex-row justify-items-center">
-            <h2>Educacion</h2>
-            <button class="btn add-button" routerLink="/add-educacion" *ngIf="isLogged">
+            <h2 class="titulo">Educacion</h2>
+            <button class="btn add-button" (click)="open_modal_addEdu()" *ngIf="isLogged">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                 </svg>
@@ -10,14 +10,14 @@
         </div>
         <ul>
             <li class="d-flex flex-row align-items-center edu-item" *ngFor="let educacion of edu">
-                <img [src]="educacion.ruta" width="100" height="100" alt="">
+                <img [src]="educacion.imagen" width="100" height="100" alt="">
                 <div>
-                    <h3>{{educacion.institucion}}</h3>
-                    <p>{{educacion.titulo}}</p>
-                    <p>{{educacion.descripcion}}</p>
+                    <h3 class="titulo-2">{{educacion.institucion}}</h3>
+                    <p class="texto">{{educacion.titulo}}</p>
+                    <p class="texto">{{educacion.descripcion}}</p>
                 </div>
                 <div class="btn-option d-flex flex-column" *ngIf="isLogged">
-                    <button class="btn edit-button" routerLink="/edit-educacion/{{educacion.id}}">
+                    <button class="btn edit-button" (click)="open_modal_editEdu(educacion.id)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
                         </svg>
