--- a/src/app/componentes/habilidades/add-habilidad-component/add-habilidad.component.html
+++ b/src/app/componentes/habilidades/add-habilidad-component/add-habilidad.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center form-container">
-    <form class="myform" (ngSubmit)="onCreate()" novalidate #f="ngForm" action="">
+<div mat-dialog-content>
+    <form class="d-flex flex-column" novalidate #f="ngForm" action="">
         <div class="form-group">
             <label for="nombre">Nombre de habilidad</label>
             <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="nombre" required>
@@ -9,9 +9,10 @@
             <input type="number" placeholder="1 - 100" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="porcentaje" required>
         </div>
         <div class="form-group">
-            <label for="ruta">Ruta / URL</label>
-            <input type="text" class="form-control" id="ruta" name="ruta" [(ngModel)]="ruta" required>
+            <label for="imagen">Seleccione una imagen</label>
+            <input type="file" (change)="capturarFile($event)" accept="image/*" class="form-control" id="imagen" name="imagen" required>
         </div>
-        <button class="btn btn-primary">Agregar</button>
+        <button class="btn btn-primary" mat-button (click)="onCreate()">Agregar habilidad</button>
+        <button class="btn btn-primary" mat-button (click)="cerrar()">Cancelar</button>
     </form>
 </div>
