--- a/src/app/componentes/habilidades/edit-habilidad-component/edit-habilidad.component.html
+++ b/src/app/componentes/habilidades/edit-habilidad-component/edit-habilidad.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center form-container">
-    <form class="myform" (ngSubmit)="onUpdate()" novalidate #f="ngForm" action="">
+<div mat-dialog-content>
+    <form class="d-flex flex-column" novalidate #f="ngForm" action="">
         <div class="form-group">
             <label for="institucion">Institucion</label>
             <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="habilidad.nombre" required>
@@ -9,9 +9,10 @@
             <input type="number" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="habilidad.porcentaje" required>
         </div>
         <div class="form-group">
-            <label for="ruta">Ruta</label>
-            <input type="text" class="form-control" id="ruta" name="ruta" [(ngModel)]="habilidad.ruta" required>
+            <label for="imagen">Seleccione una imagen</label>
+            <input type="file" (change)="capturarFile($event)" accept="image/*" class="form-control" id="imagen" name="imagen" required>
         </div>
-        <button class="btn btn-primary">Actualizar</button>
+        <button class="btn btn-primary" mat-button (click)="onUpdate()">Actualizar habilidad</button>
+        <button class="btn btn-primary" mat-button (click)="cerrar()">Cancelar</button>
     </form>
 </div>
