--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,17 +1,21 @@
-<div class="text-center login-container">
-    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate class="form-signin">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-        <h1 class="h3 mb-3"></h1>
-        <label for="nombreUsuario" class="sr-only">Usuario</label>
-        <input type="text" id="nombreUsuario" name="nombreUsuario" class="form-control" placeholder="Usuario" required="" autofocus="" [(ngModel)]="nombreUsuario" required>
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" [(ngModel)]="password" required>
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
+<div mat-dialog-content>
+    <form class="d-flex flex-column" #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+        <div class = "position-relative">
+            <div class="form-group">
+                <label for="nombreUsuario" class="sr-only">Usuario</label>
+                <input type="text" id="nombreUsuario" name="nombreUsuario" class="form-control" placeholder="Usuario" required="" autofocus="" [(ngModel)]="nombreUsuario" required>
+            </div>
+            <div class="form-group">
+               <label for="password" class="sr-only">Password</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" [(ngModel)]="password" required>
+            </div>
+            <span class="invalid" id="mensaje-error" hidden>Credenciales invalidas</span>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
-        <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
-      </form>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" value="remember-me"> Recordarme
+            </label>
+        </div>
+        <button class="btn btn-primary" mat-button type="submit">Ingresar</button>
+    </form>
 </div>
