--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,10 @@
     width: 100%;
     margin: 35px;
     padding: 40px;
-    box-shadow: 10px 10px 5px rgba(100,100,100,1);
-    background-color: rgba(255, 255, 255,0.9);
+    background-color: rgba(255, 255, 255,1);
 }
 
-app-foto-perfil {
+.foto-perfil-container {
     position: relative;
     top: -120px;
     left: 40px;
@@ -24,11 +23,6 @@ app-foto-perfil {
     background-repeat: repeat;
 }
 
-.btn-option {
-    position: absolute;
-    right: -65px;
-}
-
 .add-button, .del-button, .edit-button {
     border: none;
     position: relative;
@@ -39,6 +33,39 @@ app-foto-perfil {
     transform: scale(1.3);
 }
 
+.titulo {
+    margin: 5px !important;
+    margin-bottom: 10px !important;
+    font-size: 30px !important;
+}
+
+.titulo-2 {
+    margin: 5px !important;
+    font-size: 25px !important;
+}
+
+.texto {
+    font-size: 20px !important;
+    margin: 5px !important;
+}
+
+.form-group {
+    margin: 10px;
+}
+
+mat-dialog-container{
+    margin: 10px;
+}
+
+label {
+    font-size: 20px;
+    font-style: bold;
+    margin: 10px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
 @media (max-width: 766px){
     .banner{
         width: 85%;
@@ -48,7 +75,7 @@ app-foto-perfil {
         zoom: 80%;
     }
 
-    app-foto-perfil{
+    .foto-perfil-container{
         display: flex;
         justify-content: center;
         left: 0;
