--- a/src/app/componentes/habilidades/edit-habilidad-component/edit-habilidad.component.html
+++ b/src/app/componentes/habilidades/edit-habilidad-component/edit-habilidad.component.html
@@ -9,8 +9,8 @@
             <input type="number" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="habilidad.porcentaje" required>
         </div>
         <div class="form-group">
-            <label for="imagen">Seleccione una imagen</label>
-            <input type="file" (change)="capturarFile($event)" accept="image/*" class="form-control" id="imagen" name="imagen" required>
+            <label for="imagen">Pegue la URL de la img</label>
+            <input type="text" class="form-control" id="imagen" name="imagen" [(ngModel)]="habilidad.imagen" required>
         </div>
         <button class="btn btn-primary" mat-button (click)="onUpdate()">Actualizar habilidad</button>
         <button class="btn btn-primary" mat-button (click)="cerrar()">Cancelar</button>
