--- a/src/app/componentes/proyectos/add-proyecto-component/add-proyecto.component.html
+++ b/src/app/componentes/proyectos/add-proyecto-component/add-proyecto.component.html
@@ -5,8 +5,8 @@
             <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="nombre" required>
         </div>
         <div class="form-group">
-            <label for="imagen">Seleccione una imagen</label>
-            <input type="file" (change)="capturarFile($event)" accept="image/*" class="form-control" id="imagen" name="imagen" required>
+            <label for="imagen">Pegue la URL de la img</label>
+            <input type="text" class="form-control" id="imagen" name="imagen" [(ngModel)]="imagen" required>
         </div>
         <div class="form-group">
             <label for="githublink">Link a github (URL)</label>
