--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,4 +1,4 @@
- <div class="d-flex justify-content-center banner-container">
+ <div class="d-flex justify-content-center">
      <img class="banner" src="../../../assets/imagenes/banner.jpg" alt="">
  </div>
 
