--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -8,7 +8,7 @@
                 </svg>
             </button>
         </div>
-        <ul class="d-flex align-items-center flex-wrap">
+        <ul class="d-flex justify-content-center align-items-center flex-wrap">
             <li class="d-flex flex-column align-items-center habilidad-item" *ngFor="let habilidad of habilidades">
                 <circle-progress
                     [percent]="habilidad.porcentaje"
