--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -13,7 +13,7 @@
                 <div class="tarjeta">
                     <div class="cara d-flex flex-column align-items-center">
                         <img [src]="proyecto.imagen" width="250" height="250" alt="">
-                        <span class="span_proyect_item">{{proyecto.nombre}}</span>
+                        <span class="span_proyect_item texto">{{proyecto.nombre}}</span>
                     </div>
                     <div class="dorso d-flex justify-content-center align-items-center">
                         <a [href]="proyecto.githublink" target="_blank" class="git-link d-flex flex-column align-items-center">
