correccion falta de ortografia en educacion

--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
     <div id="educacion">
         <div class="d-flex flex-row justify-items-center">
-            <h2 class="titulo">Educacion</h2>
+            <h2 class="titulo">Educación</h2>
             <button class="btn add-button" (click)="open_modal_addEdu()" *ngIf="isLogged">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
