cambio del logo obsoleto en el banner

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand has-logo" href="#">
       <img
         class=""
-        src="//argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1659143423/APLogo-20-20.png"
+        src="https://desa.argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1660276176/APLogo-20-20.png"
         width="130"
         alt="argpprod"
       />
